# tabular_tool

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  tabular_tool.gemspec
exe/: tt
lib/: tabular_tool.rb
lib/tabular_tool/: cli.rb  formats.rb  operations.rb  version.rb
lib/tabular_tool/operations/: dsl_to_sql.rb  filter.rb  lint.rb  sort.rb  stats.rb
sig/: tabular_tool.rbs
src/: main.rs
test/: test_helper.rb  test_tabular_tool.rb
test/fixtures/: basic.csv  basic.csv.zst  basic.json  basic.jsonl  basic.parquet  basic.tsv  headerless.csv  lint_test.csv
test/tabular_tool/: test_cli.rb  test_compressed_optimization.rb  test_filter.rb  test_format_write.rb  test_formats.rb  test_lint.rb  test_operations.rb  test_sort.rb  test_stats.rb
